# dicom-csv

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
dicom_csv/: __init__.py  aggregation.py  convert.py  crawler.py  exceptions.py  interface.py  misc.py  rtstruct.py  scripts.py  spatial.py  tags.py  utils.py
dicom_csv/rtstruct/: __init__.py  contour.py  csv.py  meta.py
docs/: conf.py  dicom_csv.rst  index.rst  requirements.txt
docs/tutorials/: dicom.rst  rtstruct.rst
scripts/: benchmark_stack_images.py  generate_compressed_dataset.py
tests/: conftest.py  test_file_operations.py  test_interfaces.py  test_spatial.py
